--- a/webpack-dev-server/src/index.html
+++ b/webpack-dev-server/src/index.html
@@ -2,11 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>html 模板</title>
+		<title></title>
 	</head>
 	<body>
-		<div id="root">
-			
-		</div>
 	</body>
 </html>
